--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A calendar package that show both gregorian and hijri date",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -20,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/User-425/hijri-gregorian-calendar/issues"
   },
-  "homepage": "https://github.com/User-425/hijri-gregorian-calendar#readme"
+  "homepage": "https://github.com/User-425/hijri-gregorian-calendar#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4"
+  }
 }
